--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -623,7 +623,7 @@ a.pretty-link {
     margin-bottom: 1rem;
 }
 
-.form-control-label.required,
+.col-form-label.required,
 .choice-label.required {
 	color: inherit;
 	font-weight: bold;
