Gift card fields now handled by model binder

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrderDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrderDetails.cshtml
@@ -107,8 +107,8 @@
             <div class="clear"></div>
 
             @{
-                var dataDictGiftCard = new ViewDataDictionary();
-                dataDictGiftCard.TemplateInfo.HtmlFieldPrefix = "giftcard";
+				var dataDictGiftCard = new ViewDataDictionary();
+				dataDictGiftCard.TemplateInfo.HtmlFieldPrefix = Model.GiftCardFieldPrefix;
                 @Html.Partial("_ProductAddGiftCardInfo", Model.GiftCard, dataDictGiftCard)
             }
             
