--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -48,7 +48,7 @@
                         });
                     </script>
                     <div class="checkbox">
-                        <label>
+                        <label class="mb-0">
                             <input id="termsofservice" type="checkbox" name="termsofservice" />
                             @Html.Raw(terms)
                         </label>
