--- a/src/Presentation/SmartStore.Web/Views/Customer/UserAgreement.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/UserAgreement.cshtml
@@ -31,7 +31,7 @@
         <div>
             <div class="download-agreement alert alert-info">
                 <div class="checkbox">
-                    <label for="download-agreement" class="checkbox">
+                    <label for="download-agreement" class="checkbox mb-0">
                         <input id="download-agreement" type="checkbox" value="@T("DownloadableProducts.IAgree")" />
                         @T("DownloadableProducts.IAgree")
                     </label>
