Fixed address display in checkout

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
@@ -60,6 +60,8 @@ $mm-selected-color:                     $brand-warning;
     }
 
     .nav-item {
+        position: relative;
+
         .badge {
             position: absolute;
             right: 3px;
