--- a/src/Presentation/SmartStore.Web/Views/Checkout/ShippingAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/ShippingAddress.cshtml
@@ -24,10 +24,10 @@
                     @T("Checkout.SelectShippingAddress")
                 </div>
                 <div class="block-body">
-                    <div class="card-deck card-cols-sm-1 card-cols-md-2 card-cols-lg-3 block-body address-grid">
+                    <div class="artlist artlist-grid artlist-3-cols artlist-boxed block-body address-grid">
                         @foreach (var item in Model.ExistingAddresses)
                         {
-                            <div class="item-box card card-block">
+                            <div class="item-box art">
                                 <div class="address-item">
                                     <div class="select-button">
                                         <button class="btn btn-secondary btn-block select-shipping-address-button" onclick="setLocation('@Url.Action("SelectShippingAddress", new { addressId = item.Id })    ')">
