--- a/src/Presentation/SmartStore.Web/Views/Blog/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Blog/List.cshtml
@@ -25,6 +25,7 @@
     @{
         Html.RenderAction("BlogMonths", "Blog");
         Html.RenderAction("BlogTags", "Blog");
+        Html.RenderAction("PollBlock", "Poll", new { systemKeyword = "Blog" });
     }
 }
 
