--- a/src/Presentation/SmartStore.Web/Views/Customer/Partials/MyAccountMenu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Partials/MyAccountMenu.cshtml
@@ -91,3 +91,5 @@
 </div>
 
 @{ Html.RenderWidget("myaccount_menu_after"); }
+
+@{ Html.RenderAction("PollBlock", "Poll", new { systemKeyword = "MyAccountMenu" }); }
