--- a/src/Presentation/SmartStore.Web/Views/Poll/Partials/_Poll.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Poll/Partials/_Poll.cshtml
@@ -4,19 +4,23 @@
     Html.AddScriptParts("~/Themes/Flex/Scripts/public.voting.js");
 }
 
-<div id="poll-block-@(Model.Id)" class="@(Model.SystemKeyword.Equals("RightColumnPoll") ? "" : "card") poll-item equalized-column" data-equalized-deep="true">
-    <div class="@(Model.SystemKeyword.Equals("RightColumnPoll") ? "fs-h6 mb-3" : "card-header")" data-equalized-part="name">
-        @Model.Name
-    </div>
+<div id="poll-block-@(Model.Id)" class="card poll-item mt-3">
+    <div class="card-header">@Model.Name</div>
     @if (Model.AlreadyVoted)
     {
-        <div class="poll-results @(Model.SystemKeyword.Equals("RightColumnPoll") ? "" : "card-block")">
+        <div class="poll-results card-block">
             @foreach (var item in Model.Answers)
             {
                 <div class="answer">
                     <div class="vote-result-percent pull-right">@((item.PercentOfTotalVotes/100).ToString("#0.##%"))</div>
                     <div class="vote-result-line">@item.Name (@item.NumberOfVotes)</div>
-                    <progress class="progress progress-info" value="@(Math.Round(item.PercentOfTotalVotes, 0))" max="100"></progress>
+
+                    <div class="progress">
+                        <div class="progress-bar bg-info" role="progressbar" 
+                             style="width: @(Math.Round(item.PercentOfTotalVotes, 0))%" 
+                             aria-valuenow="@(Math.Round(item.PercentOfTotalVotes, 0))" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+
                 </div>
             }
             <div class="poll-total-votes text-success">@string.Format(T("Polls.TotalVotes").Text, Model.TotalVotes)</div>
@@ -24,15 +28,15 @@
     }
     else
     {
-        <div class="poll-take-poll @(Model.SystemKeyword.Equals("RightColumnPoll") ? "" : "card-block")">
-            <div data-equalized-part="data">
-                @foreach (var item in Model.Answers)
-                {
-                    <div class="radio">
-                        <label><input type="radio" id="pollanswers-@(item.Id)" name="pollanswers-@(Model.Id)" value="@item.Id" />@item.Name</label>
-                    </div>
-                }
-            </div>
+        <div class="poll-take-poll card-block">
+            
+            @foreach (var item in Model.Answers)
+            {
+                <div class="radio">
+                    <label><input type="radio" id="pollanswers-@(item.Id)" name="pollanswers-@(Model.Id)" value="@item.Id" />@item.Name</label>
+                </div>
+            }
+            
             <button id="vote-poll-@(Model.Id)" 
                 data-id="@(Model.Id)" 
                 data-target="@(Url.Action("Vote"))" 
