--- a/src/Presentation/SmartStore.Web/Views/Poll/Partials/HomePagePolls.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Poll/Partials/HomePagePolls.cshtml
@@ -3,7 +3,7 @@
 
 @if (Model.Count > 0)
 {
-    <div class="card-deck card-cols-sm-1 card-cols-md-@(Model.Count >= 2 ? "2" : Model.Count.ToString()) card-cols-lg-@(Model.Count >= 3 ? "3" : Model.Count.ToString()) todays-poll-box-block my-3">
+    <div class="card-deck card-cols-xs-1 card-cols-md-@(Model.Count >= 2 ? "2" : Model.Count.ToString()) card-cols-lg-@(Model.Count >= 3 ? "3" : Model.Count.ToString()) todays-poll-box-block mb-3">
         @foreach (var poll in Model)
         {
             Html.RenderPartial("_Poll", poll);
